<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Flashcards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="deck1">Deck 1</string>
    <string name="deck2">Deck 2</string>
    <string name="deck3">Deck 3</string>
    <string name="deck4">Deck 4</string>
    <string name="deck5">Deck 5</string>
    <string name="welcome">Pocket Notecards</string>
    <string name="ready">Ready? Swipe Right and Left for Questions, Up and Down for Answers.</string>
    <string name="delete">Delete Question</string>
    <string name="edit">Edit Question</string>
    <string name="file">File Name</string>
    <string name="deckName">Note Card Title</string>
    <string name="question">Enter a Question</string>
    <string name="answer">Enter the Answer</string>
    <string name="add">Add a Question</string>
    <string name="finish">Finished</string>
    <string name="create">Create Cards</string>
    <string name="select">Select</string>
    <string name="add_question">Add a Question</string>
    <string name="deck_1_file">File for Deck 1</string>
    <string name="deck_2_file">File for Deck 2</string>
    <string name="deck_3_file">File for Deck 3</string>
    <string name="deck_4_file">File for Deck 4</string>
    <string name="deck_5_file">File for Deck 5</string>
    <string name="fileSelect">Select a File</string>
    <string name="selectFont">Select a Font Size:</string>
    <string name="known">I know this one</string>
    <string name="title_activity_note_card">NoteCard</string>
    <string name="import_cards">Import Cards</string>
    <string name="study">Go Study</string>
    <string name="random_question">Random Questions:</string>

</resources>
