<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nelson.flashcards.study.Welcome">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="18sp"      />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="launchNoteCard"
        android:text="@string/deck1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="2dp"
        android:onClick="launchDeckTwo"
        android:text="@string/deck2" />

    <Button
        android:id="@+id/deck3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="2dp"
        android:onClick="launchDeckThree"
        android:text="@string/deck3" />

    <Button
        android:id="@+id/deck4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deck3"
        android:layout_below="@+id/deck3"
        android:layout_marginTop="2dp"
        android:onClick="launchDeckFour"
        android:text="@string/deck4" />

    <Button
        android:id="@+id/deck5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deck4"
        android:layout_below="@+id/deck4"
        android:layout_marginTop="2dp"
        android:onClick="launchDeckFive"
        android:text="@string/deck5" />

</RelativeLayout>
