

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/deckName"
        android:textSize="25sp"
        tools:context=".CreateQuestion" />

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="15"
        android:background="@drawable/cardtheme_edit_text_holo_dark"
        android:textColor="@color/off_white"
        android:textColorHint="@color/off_white"
        android:hint="Subject Title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title_edit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10sp"
        android:textSize="25sp"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:background="@drawable/cardtheme_edit_text_holo_dark"
        android:textColor="@color/off_white"
        android:textColorHint="@color/off_white"
        android:hint="@string/question" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/answer"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:textColor="@color/off_white"
        android:textColorHint="@color/off_white"
        android:background="@drawable/cardtheme_edit_text_holo_dark"
        android:hint="@string/answer" />

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="30sp"
        android:background="@drawable/cardtheme_btn_default_holo_dark"
        android:text="@string/add" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        android:background="@drawable/cardtheme_btn_default_holo_dark"
        android:text="@string/finish" />
        </LinearLayout>
    </ScrollView>


